added methods for like
